# elec376-landlord-app

./: .gitignore  README.md  run.sh  run_backend.sh  run_frontend.sh
backend/: CMakeLists.txt
backend/data/: landlord_requests.json  landlords.json  reported.json  reviews.json  users.json
backend/src/: main.cpp
backend/src/controllers/: AdminCtrl.cpp  AdminCtrl.h  AuthCtrl.cpp  AuthCtrl.h  LandlordCtrl.cpp  LandlordCtrl.h  ReviewCtrl.cpp  ReviewCtrl.h  SupabaseHelper.cpp  SupabaseHelper.h  UserCtrl.cpp  UserCtrl.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: reported.json
frontend/src/: Admin.jsx  App.jsx  LandlordRequests.jsx  Landlords.jsx  Leaderboard.jsx  Login.jsx  Profile.jsx  ReportReview.jsx  ReportedInbox.jsx  Review.jsx  ReviewList.jsx  Signup.jsx  api.js  main.jsx
